--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'kodilla-spring-basic'
 include 'kodilla-rest-api'
 include 'Project_test'
 include 'kodilla-selenium'
+include 'kodilla-google-selenium'
 
