--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,6 @@ include 'kodilla-rest-api'
 include 'Project_test'
 include 'kodilla-selenium'
 include 'kodilla-google-selenium'
+include 'kodilla-cucumber'
+include 'kodilla-cucumber'
 
