--- a/kodilla-cucumber/build.gradle
+++ b/kodilla-cucumber/build.gradle
@@ -2,9 +2,8 @@ plugins {
     id 'java'
 }
 
-version 'unspecified'
-
-sourceCompatibility = 1.8
+group 'com.kodilla'
+version '1.0-SNAPSHOT'
 
 dependencies {
     implementation 'junit:junit:4.13.1'
