--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,6 @@ include 'kodilla-selenium'
 include 'kodilla-google-selenium'
 include 'kodilla-cucumber'
 include 'kodilla-cucumber'
+include 'kodilla-cucumber'
+include 'kodilla-code-coverage'
 
